--- a/Versao-Texto-Colab.ipynb
+++ b/Versao-Texto-Colab.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dudumaroja/GeminiRPG/blob/main/GeminiRPG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dudumaroja/GeminiRPG/blob/main/Versao-Texto-Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install google-generativeai ipython\n"
+        "!pip install -q -u google-generativeai ipython\n"
       ]
     },
     {
@@ -53,8 +53,12 @@
         "import pathlib\n",
         "import textwrap\n",
         "import IPython\n",
+        "import google.colab\n",
         "import google.generativeai as genai\n",
+        "from google.colab import userdata\n",
         "\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "genai.configure(api_key=api_key)\n",
         "\n",
         "from IPython.display import display\n",
         "from IPython.display import Markdown\n",
@@ -64,40 +68,6 @@
         "def to_markdown(text):\n",
         "    text = text.replace('•', '  *')\n",
         "    return Markdown(textwrap.indent(text, '> ', predicate=lambda _: True))\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "7ZBmS1Qny8PD"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Sua API Key vai aqui!!!!"
-      ],
-      "metadata": {
-        "id": "e_XJKFiG0ZU-"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "GOOGLE_API_KEY=\"\"  # Substitua pelo seu API KEY"
-      ],
-      "metadata": {
-        "id": "M0MJ-taQ0X9g"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "genai.configure(api_key=GOOGLE_API_KEY)\n",
-        "\n",
-        "\n",
         "\n",
         "#Configurações de resposta e filtros\n",
         "\n",
@@ -133,7 +103,7 @@
         "    prompt = input(\"Jogador: \")\n"
       ],
       "metadata": {
-        "id": "SdCQhAUH0h4G"
+        "id": "7ZBmS1Qny8PD"
       },
       "execution_count": null,
       "outputs": []
