--- a/Versao-Texto-Colab.ipynb
+++ b/Versao-Texto-Colab.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Esse e uma versão mais simples apenas em texto para rodar via google collab.. não se esqueça de configurar sua API Key"
+        "Esse e uma versão mais simples apenas em texto para rodar via google collab.."
       ],
       "metadata": {
         "id": "_ChdLBZyzfF3"
